--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
 </head>
+
 <body>
-    
+
     <!-- Header -->
     <header>
         <nav>
+            <a href="" title="WebStudio">WebStudio</a>
             <ul>
-                <li><a href="" target="_blank" title="WebStudio">WebStudio</a></li>
-                <li><a href="" target="_blank" title="Студия">Студия</a></li>
-                <li><a href="" target="_blank" title="Портфолио">Портфолио</a></li>
-                <li><a href="" target="_blank" title="Контакты">Контакты</a></li>
+                <li><a href="" title="Студия">Студия</a></li>
+                <li><a href="" title="Портфолио">Портфолио</a></li>
+                <li><a href="" title="Контакты">Контакты</a></li>
             </ul>
         </nav>
 
@@ -27,22 +29,31 @@
 
     <main>
         <!-- Hero -->
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
 
         <!-- Advantages -->
         <section>
             <h2 hidden>Преимущества</h2>
             <ul>
-                <li><h3>Внимание к деталям</h3>
+                <li>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li><h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-                <li><h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-                <li><h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
             </ul>
         </section>
 
@@ -61,7 +72,8 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/our-team/igor-demianenko.jpg" alt="Портрет Игорь Демьяненко" width="270" height="260">
+                    <img src="./images/our-team/igor-demianenko.jpg" alt="Портрет Игорь Демьяненко" width="270"
+                        height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
@@ -71,12 +83,14 @@
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/our-team/nikolay-tarasov.jpg" alt="Портрет Николай Тарасов" width="270" height="260">
+                    <img src="./images/our-team/nikolay-tarasov.jpg" alt="Портрет Николай Тарасов" width="270"
+                        height="260">
                     <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/our-team/mikhail-ermakov.jpg" alt="Портрет Михаил Ермаков" width="270" height="260">
+                    <img src="./images/our-team/mikhail-ermakov.jpg" alt="Портрет Михаил Ермаков" width="270"
+                        height="260">
                     <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
@@ -87,13 +101,14 @@
     <!-- Footer -->
     <footer>
         <a href="" target="_blank" title="WebStudio">WebStudio</a>
-        <address> 
+        <address>
             <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li>info@example.com</li>
-                <li>+38 099 111 11 11</li>
+                <li><a href="https://goo.gl/maps/jzeL1Wrc32j8jV9C7">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@example.com" info@example.com>info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
 </body>
+
 </html>
